fix overflow of background gradient in nav bar

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -42,7 +42,7 @@ a {
   border-radius: 100%;
 }
 
-.nav-bar {
+.nav-bar ul {
   background-image: linear-gradient(to top, #838383, #54575a, #8a8a8a);
   border-radius: 5px;
   overflow: hidden;
